# CurseFrame

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.py  demo_components.py  demo_small_visual.py  demo_visual.py  example_mvc_app.py  pyproject.toml  requirements.txt
.kiro/specs/curses-ui-framework/: design.md  requirements.md  tasks.md
docs/: API_REFERENCE.md  CONFIGURATION.md  MVC_PATTERNS.md
src/curses_ui_framework/: __init__.py  content_manager.py  controller.py  exceptions.py  frame_renderer.py  layout_calculator.py  model.py  view.py  window_manager.py
tests/: __init__.py  test_integration.py  test_properties.py
